style.css
/* ... */
body{
    margin: 0;
    padding: 0;
}
#header,#about-us,#what-we-offer,#benefits-to-you,#our-projects{
    display: grid;
    justify-items: center;
    align-items: center;
}
#nav{
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.3328) 4.85%, rgba(43, 102, 255, 0.2964) 98.69%), #272727;
    background-blend-mode: color, normal;
    opacity: 0.87;
    position: fixed;
    z-index: 3000;
    width: 100%;
    height: 67px;
    display: grid;
    justify-items: center;
    align-items: center;
}
#nav h5{
    margin:0;
    font-size: 18px;
}
#toggle{
    justify-self: flex-end;
    grid-row: 1;
    color: rgba(255, 255, 255, 0.9);
    margin: 10px 20px;
    display: none;
}
#toggle span{
    font-size: 24px;
}
#telephone,#nav-pages{
    grid-row: 1;
}
#telephone{
    margin: 0% 0% 0% 9.44%;
    font-family: Noto Sans SC Bold;
    font-style: normal;
    font-size: 18px;
    line-height: 26px;
    color: #FFFFFF;
    justify-self: flex-start;
}
#nav-pages{
    justify-self: flex-end;
    margin: 0 25px;
}
#nav-pages a{
    font-family: Noto Sans SC;
    font-weight: normal;
    margin: 0px 10px;
    color: #FFFFFF;
    text-decoration: none;
}
#header{
    background-image: url(./assets/img/Rectangle\ 1.png);
    padding:67px 0px 0px 0px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position-x: center;
    background-position-y: center;
    height: 931px;
}
#header #title h1{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: 900;
    font-size: 96px;
    text-align: center;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 6px 0px 0px rgba(255, 33, 33, 0.25), -8px 0px 0px rgba(27, 100, 209, 0.26);
    color: #FFFFFF;
    margin: 0;
}
#header #title h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    text-align: center;
    color: #F0EFEF;
}
#header #subtitle{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 50px 0px;

}
#header #subtitle h4{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 28px;
    line-height: 41px;
    margin: 0 20px;  
    text-align: center;  
    color: #F0EFEF;
}
#header #subtitle hr{
    width: 89px;
    height: 0px;
    opacity: 0.5;
    border: 2px solid #FFFFFF;
    margin: 0;
}
#header #logos{
    display: flex;
    justify-content: center;
}
#header #logos .logo{
    margin: 0px 20px;
}
#about-us{
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.16) 4.85%, rgba(43, 102, 255, 0.1425) 98.69%), #EEEAF1;
    background-blend-mode: color, normal;
}
#about-us h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #272727;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#about-us h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin:0;
    color: #7B7581;
}
#about-us #text{
    width: 524px;
    height: 397px;   
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 30px;
    text-align: justify;  
    color: #000000;
    z-index: 100;
    grid-row: 1/1;
    grid-column: 1/1;
    position: relative;
    bottom: 60%;
}
#about-us p:first-child{
    padding-top: 16px;
}
#about-us #people{
    z-index: 200;
    position: relative;
    left: 30px;
}
#about-us #head-span{
    margin:0px 33px 0px 64px;
}
#about-us p,#head-span{
    display: inline-block;
}
#about-us #images{
    display: grid;
    justify-items: center;
    align-items: flex-end;
    position: relative;
    bottom: -4px;
    margin-top: 100px;
}
#about-us #elipse-1,#elipse-2,#elipse-3,#people{
grid-row: 1/1;
grid-column: 1/1;
}
#about-us #people img{
    width: 94vw;
    max-width: 1139px!important;
}
#about-us #elipse-1 img{
    width: 45vw;
    max-width: 864px!important;
}
#about-us #elipse-2 img{
    width: 35vw;
    max-width: 672px!important;
}
#about-us #elipse-3 img{
    width: 25vw;
    max-width: 480px!important;
}
#about-us #elipse-1{
    z-index: 20;
}
#about-us #elipse-2{
    z-index: 30;
}
#about-us #elipse-3{
    z-index: 40;
}
#about-us p,#about-us pre{
    margin: 0;
}
#what-we-offer{
    width: min-content;
    margin: 0 auto;
}
#what-we-offer h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #272727;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#what-we-offer h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin: 0;
    color: #7B7581;
}
#what-we-offer #cards-1,#cards-2,#cards-3,#content{
    display: grid;
}
#what-we-offer .card{
    border: 1px solid #F4E7F3;
    box-sizing: border-box;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.12));
    border-radius: 3px;
    width: 377px;
    max-height: 484px;
    padding: 63px 42px;
    display: grid;
    justify-items: center;
    margin: 10px;
    background: white;
}
#what-we-offer .card h4{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin: 48px 0px 0px 0px;
    color: #555555;
}
#what-we-offer .card p{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 26px;
    text-transform: uppercase;

    color: #555555;

}
/* ... */

